--- a/src/Components/CountriesList/CountriesList.module.css
+++ b/src/Components/CountriesList/CountriesList.module.css
@@ -16,17 +16,35 @@
 
   color: #ffffff;
   padding: 25px;
-
+  margin-bottom: 20px;
   display: flex;
 }
 
 .theadRow:not(:first-child) {
   border-left: 1px solid #fff;
-  height: 100%;
 }
 
 .theadRow:nth-child(2) {
   display: inline-block;
   margin-left: 23px;
   margin-right: 1051px;
+}
+
+.tbodyRow {
+  font-family: Roboto;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.17;
+
+  color: #000000;
+  background: #ffffff;
+  display: block;
+  height: 80px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 20px;
+  padding: 25px;
+  margin-bottom: 20px;
+}
+.tbodyRow:not(:first-child) {
+  border-left: 1px solid #b2b2b2;
 }
