--- a/src/Components/SearchBar/SearchBar.module.css
+++ b/src/Components/SearchBar/SearchBar.module.css
@@ -14,6 +14,7 @@
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
   border-radius: 20px;
   outline: none;
+  border: none;
   padding-top: 12px;
   padding-bottom: 12px;
   padding-left: 32px;
