--- a/src/Components/Container/Container.module.css
+++ b/src/Components/Container/Container.module.css
@@ -2,6 +2,6 @@
   width: 100%;
   padding-left: 60px;
   padding-right: 60px;
-  /* margin-left: auto;
-  margin-right: auto; */
+  margin-left: auto;
+  margin-right: auto;
 }
